--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,11 @@
     "@types/node": "^20.19.17",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
