--- a/backends/servico-planilhas/requirements.txt
+++ b/backends/servico-planilhas/requirements.txt
@@ -5,3 +5,5 @@ uvicorn>=0.23.0
 psycopg2-binary>=2.9.10
 pydantic-settings>=2.12.0
 supabase-py>=2.5.0
+pydantic-settings>=2.12.0
+sqlalchemy>=2.0.0
