--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ fastapi>=0.100.0
 uvicorn>=0.23.0
 psycopg2-binary>=2.9.10
 pydantic-settings>=2.12.0
-supabase-py>=2.5.0
+supabase>=2.0.0
 pydantic-settings>=2.12.0
 sqlalchemy>=2.0.0
+pytest>=7.4.0
