--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,9 +5,8 @@ uvicorn>=0.23.0
 psycopg2-binary>=2.9.10
 pydantic-settings>=2.12.0
 supabase>=2.0.0
-pydantic-settings>=2.12.0
+python-jose[cryptography]
 sqlalchemy>=2.0.0
 pytest>=7.4.0
 fpdf2>=2.7.0
 python-multipart
-httpx>=0.27.0
