--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^0.1.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -34,9 +34,9 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "autoprefixer": "^10.4.23",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "jest": "^30.2.0",
+    "eslint": "^10.0.0",
+    "eslint-config-next": "^16.1.6",
+    "jest": "^25.0.0",
     "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
