--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -68,4 +68,13 @@ server {
         return 200 "OK";
         add_header Content-Type text/plain;
     }
+
+    # Webhook para auto-deploy
+    location /webhook {
+        proxy_pass http://172.17.0.1:9000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Content-Type $content_type;
+    }
 }
